tests/baselines/reference/setterWithReturn.errors.txt
==== tests/cases/compiler/setterWithReturn.ts (2 errors) ====
    class C234 {
        public set p1(arg1) {
            if (true) {
                return arg1;
                       ~~~~
!!! setterWithReturn.ts(4,20): error TS2122: Setters cannot return a value.
            }
            else {
                return 0;
                       ~
!!! setterWithReturn.ts(7,20): error TS2122: Setters cannot return a value.
            }
       }
    }